# llm-guardrails

./: .gitignore  DESIGN.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
guardrails/: __init__.py  audit.py  classifiers.py  hitl.py  orchestrator.py  policy.py  types.py
guardrails/detectors/: __init__.py  groundedness.py  injection.py  output_schema.py  pii.py  safety.py  topicality.py
policies/: health.yaml
redteam/: cases.jsonl
tests/: test_guardrails.py
