[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-guardrails"
version = "0.1.0"
description = "Camada de guardrails em volta de chamadas de LLM em domínio regulado: validação de entrada/saída, redação de PII, detecção de injeção, groundedness, HITL e auditoria."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "DetonaRapha" }]
keywords = ["llm", "guardrails", "seguranca", "pii", "hitl", "auditoria", "governanca-ia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Detectores baseados em modelo são opcionais. O repo roda 100% sem eles.
model = [
    "presidio-analyzer>=2.2; python_version < '3.13'",
]
dev = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/DetonaRapha/llm-guardrails"

[tool.setuptools.packages.find]
include = ["guardrails*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
